tests/bad-ctor-01/out.txt
error: mismatched types: expected an arrow type, found d
  ┌─ err.sml:4:5
  │
4 │     A _ => 1
  │     ^^^

typechecking failed
